switched to use Integer.valueOf(int) instead of new Integer(int)